Fixed bugs related to board pages and organization board list layout issues

--- a/productivity/app/globals.css
+++ b/productivity/app/globals.css
@@ -5,7 +5,7 @@
   html,head,body{
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    
   }
 
   @layer base {
